VP-4642: Fix jumping product card (#39)
* VP-4642: Fix jumping product card

* VP-4642: Fix jumping product card 2

--- a/assets/scss/custom/_scaffolding.scss
+++ b/assets/scss/custom/_scaffolding.scss
@@ -6,8 +6,7 @@ a {
   &.btn.btn-link {
     font-family: $link-font-family;
     font-weight: $link-font-weight;
-    border-bottom: 1px solid transparent;
-
+    //border-bottom: 1px solid transparent;
     &:hover,
     &:focus {
       //border-bottom: 1px $link-hover-border-style $link-hover-color;
